Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,8 +9,8 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/twoforyouloja",
   "logo": "/img/uploads/download-2-.png",
-  "name": "twoforyouloja",
-  "short_name": "twoforyouloja",
+  "name": "TWO FOR YOU",
+  "short_name": "TWO FOR YOU",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
