--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "domain": "twoforyouloja.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "#222831",
+  "primary_color": "#060606",
   "theme": {
     "bootswatch": "_",
     "custom": "ecom-beauty"
@@ -18,7 +18,7 @@
   "favicon": "/img/uploads/favicon.png",
   "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "#393e46",
+  "secondary_color": "#ffffff",
   "icon": "/img/icon.png",
   "store_id": 51451,
   "description": "twoforyouloja",
