Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -21,6 +21,6 @@
   "secondary_color": "#ffffff",
   "icon": "/img/icon.png",
   "store_id": 51451,
-  "description": "twoforyouloja",
+  "description": "FEIRA PARA DURAR",
   "large_icon": "/img/large-icon.png"
 }
