Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -18,9 +18,9 @@
   "favicon": "/img/uploads/favicon.png",
   "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "#ffffff",
+  "secondary_color": "",
   "icon": "/img/icon.png",
   "store_id": 51451,
-  "description": "FEIRA PARA DURAR",
+  "description": "FEITA PARA DURAR",
   "large_icon": "/img/large-icon.png"
 }
