--- a/content/settings.json
+++ b/content/settings.json
@@ -14,7 +14,7 @@
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
-  "font_family": "Ubuntu",
+  "font_family": "Montserrat",
   "favicon": "/img/uploads/favicon.png",
   "icons_font": "_",
   "country_code": "BR",
