--- a/content/settings.json
+++ b/content/settings.json
@@ -15,7 +15,7 @@
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "Montserrat",
-  "favicon": "/img/uploads/download-2-.png",
+  "favicon": "/img/uploads/whatsapp-image-2023-08-25-at-08.40.00.jpeg",
   "icons_font": "tabler-icons",
   "country_code": "BR",
   "secondary_color": "",
