--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "twoforyouloja.netlify.app",
+  "domain": "twoforyou.com.br",
   "currency_symbol": "R$",
   "primary_color": "#060606",
   "theme": {
